# 3d_cellular_automata_rust

./: Cargo.toml  LICENSE  TODO
assets/: shader.wgsl
benches/: my_benchmark.rs
poubelle/: main.rs
src/: color.rs  logic.rs  main.rs  render.rs  rotating_camera.rs  rule.rs  sim.rs  sim_ui.rs  utils.rs
